2014-06-14  Titus Brown  <t@idyll.org>

    * doc/scripts.txt, tests/test_scripts.py, scripts/sweep-reads.py:
	renamed sweep-reads-buffered to sweep-reads.

2014-06-13  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: split coverity target in two: -build and -upload. Added
    configuration target

2014-06-13  Titus Brown  <t@Titus-MacBook-Air-2.local>

    * doc/install.txt: updated virtuaenv command to use python2 explicitly,
	for arch support.

2014-06-13  Titus Brown  <t@idyll.org>

    * khmer/__init__.py, khmer/file_args.py: Moved copyright message to a
	comment.
    * khmer/file.py: updated error messages for disk-space checking functions;
	added test hooks.
    * tests/test_script_arguments.py: added tests for several functions in
	khmer/file.py.
    * sandbox/assemstats3.py: handle missing input files.

2014-06-11  Michael Wright <wrigh517@msu.edu>

    * scripts/load-into-counting: Fixed docstring misnomer to 
    load-into-counting.py

2014-06-10  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py,tests/{__init__,khmer_tst_utils,test_scripts,
    khmer_test_counting_single}.py: made tests runnable after installation.
    * lib/{khmer.hh,hashtable.hh,read_parsers.cc,read_parsers.hh}: restructure
    exception hierarchy.
    * khmer/_khmermodule.cc: Nicer error checking for hash_consume_fasta,
    hash_abundance_distribution, hashbits_consume_{fasta,fasta_and_tag
    {,with_stoptags},partitioned_fasta}, hashbits_output_partitions, and
    labelhash_consume_{,partitioned_}fasta_and_tag_with_labels.

2014-06-10  Titus Brown  <t@idyll.org>

    * Makefile: remove SHELL setting so that 'make doc' works in virtualenvs.
    * scripts/sample-reads-randomly.py: extend to take multiple subsamples
	with -S.
    * tests/test_scripts.py: added test for multiple subsamples from
	sample-reads-randomly.py

2014-06-10  Michael Wright <wrigh517@msu.edu>

    * scripts/extract-long-sequences: Moved from sandbox, added argparse and 
    FASTQ support.