@@ -1,0 +1,20 @@
+@read1_p0
+ATCGTGTAAGCTATCGTAATCGTAAGCTCTGCCTAGAGCTAGGCTAGCGTAATCGTAAGCTCTGCCTA
++
+####################################################################
+@read2_p0
+CTAGAGCTAGGCTAGCGTAATCGTAAGCTCTGCCTAGAGCTAGGCTTTGCTCTGCTCGCGCTCGCTCG
++
+####################################################################
+@read3_p1
+AACTAGCTAGCATCGATCGATCGATCTGCTGATCG
++
+###################################
+@read4_multi
+CTAGAGCTAGGCTAGCGTAATCGTAAGCTCTGCCTAGAGCTAGGCTTTGCTCTGCTCGCGCTCGCTCGCAACTAGCTAGCATCGATCGATCGATCTGCTGATCG
++
+########################################################################################################
+@read5_orphan
+TGCTGATATATAGCTAGATATATATATAGCAGGCTGGTGTATCGCGCTAGCTAGCTAGCTTTCTCTTTTTTTTTTTTTAGGGA
++
+###################################################################################
