@@ -1399,13 +1399,53 @@ def test_sweep_reads():
             seqsm == set(['read4_multi\t1\t0']))
     assert seqso == set(['read5_orphan'])
 
-    try:
-        os.remove(out1)
-        os.remove(out2)
-        os.remove(mout)
-        os.remove(oout)
-    except (IOError, OSError) as e:
-        print >>sys.stderr, 'error removing test outputs'
+
+def test_sweep_reads_fq():
+    readfile = utils.get_temp_filename('reads.fa')
+    contigfile = utils.get_temp_filename('contigs.fp')
+    in_dir = os.path.dirname(contigfile)
+
+    shutil.copyfile(utils.get_test_data('test-sweep-reads.fq'), readfile)
+    shutil.copyfile(utils.get_test_data('test-sweep-contigs.fp'), contigfile)
+
+    script = scriptpath('sweep-reads.py')
+    args = ['-k', '25', '--prefix', 'test', '--label-by-pid',
+            contigfile, readfile, 'junkfile.fa']
+
+    status, out, err = runscript(script, args, in_dir, fail_ok=True)
+
+    # check if the bad file was skipped without issue
+    assert 'ERROR' in err, err
+    assert 'skipping' in err, err
+
+    out1 = os.path.join(in_dir, 'test_0.fq')
+    out2 = os.path.join(in_dir, 'test_1.fq')
+    mout = os.path.join(in_dir, 'test_multi.fq')
+    oout = os.path.join(in_dir, 'test_orphaned.fq')
+
+    print open(out1).read()
+
+    print os.listdir(in_dir)
+
+    seqs1 = set([r.name for r in screed.open(out1)])
+    seqs2 = set([r.name for r in screed.open(out2)])
+    seqsm = set([r.name for r in screed.open(mout)])
+    seqso = set([r.name for r in screed.open(oout)])
+
+    print seqs1
+    print seqs2
+    print seqsm
+    print seqso
+    assert seqs1 == set(['read1_p0\t0', 'read2_p0\t0'])
+    assert seqs2 == set(['read3_p1\t1'])
+    assert (seqsm == set(['read4_multi\t0\t1']) or
+            seqsm == set(['read4_multi\t1\t0']))
+    assert seqso == set(['read5_orphan'])
+
+    seqs1 = set([r.accuracy for r in screed.open(out1)])
+    seqs2 = set([r.accuracy for r in screed.open(out2)])
+    seqsm = set([r.accuracy for r in screed.open(mout)])
+    seqso = set([r.accuracy for r in screed.open(oout)])
 
 
 def test_sweep_reads_2():
